--- a/admin/test.html
+++ b/admin/test.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="app"  >{{d}}</div>
- 
+    <div id='test'></div>
     <script src="./node_modules/vue/dist/vue.js"></script>
     <script>
 
@@ -55,7 +55,29 @@
                 }
     </script>
     <script>
+            navigator.permissions.query({name: "clipboard-read"}).then(result => {
+  // If permission to read the clipboard is granted or if the user will
+  // be prompted to allow it, we proceed.
+            var textElem = test
+  if (result.state == "granted" || result.state == "prompt") {
 
+    navigator.clipboard.write(data)
+
+
+
+
+
+    navigator.clipboard.read().then(data => {
+      for (let i=0; i<data.items.length; i++) {
+        if (data.items[i].type != "text/plain") {
+          alert("Clipboard contains non-text data. Unable to access it.");
+        } else {
+          textElem.innerText = data.items[i].getAs("text/plain");
+        }
+      }
+    });
+  }
+});
 
     </script>
 </body>
